# behave_fire

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt
conda-recipe/: conda-forge-workflow.md  meta.yaml
docs/: CONTAINMENT_MODULE.md  FBFM_DESCRIPTIONS.md
src/behave/: __init__.py  behave.py  behave_array.py
src/behave/components/: __init__.py  behave_units.py  behave_units_array.py  contain.py  crown.py  crown_array.py  fine_dead_fuel_moisture_tool.py  fine_dead_fuel_moisture_tool_array.py  fuel_models.py  fuel_models_array.py  ignite.py  mortality.py  safety.py  spot.py  surface.py  surface_array.py  vapor_pressure_deficit_calculator.py  vpd_array.py
src/behave/tests/: __init__.py  conftest.py  test_behave.py  test_behave_array.py
src/behave_fire/: __init__.py  behave.py
src/behave_fire/components/: __init__.py  behave_units.py  contain.py  crown.py  fire_size.py  fuel_models.py  fuel_models_array.py  mortality.py  safety.py  slope_tool.py  species_master_table.py  spot.py  surface.py  vapor_pressure_deficit_calculator.py
src/behave_fire/tests/: test_behave.py
src/examples/: landscape_fire_behavior.py
